# github-repo-manager

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-crate.yml  release.yml
docs/: developer-guide.md  user-guide.md
src/: app.rs  config.rs  error.rs  events.rs  main.rs  scheduler.rs  state.rs
src/git/: clone.rs  fetch.rs  mod.rs  upmain.rs  workspace.rs
src/github/: cache.rs  client.rs
src/ui/: clone_dialog.rs  error_popup.rs  layout.rs  mod.rs  org_panel.rs  repo_panel.rs  status_bar.rs
